--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,21 +1,38 @@
-NAME		=	libft.a
-CC			=	cc
-CFLAGS		=	-Wall -Werror -Wextra
-OBJ			=	ft_isalnum.o ft_itoa.o ft_memset.o ft_split.o ft_strlcat.o ft_strnstr.o ft_toupper.o ft_isalpha.o ft_memchr.o ft_putchar_fd.o ft_strchr.o ft_strlcpy.o ft_strrchr.o ft_atoi.o ft_isascii.o ft_memcmp.o ft_putendl_fd.o ft_strdup.o ft_strlen.o ft_strtrim.o ft_bzero.o ft_isdigit.o ft_memcpy.o ft_putnbr_fd.o ft_striteri.o ft_strmapi.o ft_substr.o ft_calloc.o ft_isprint.o ft_memmove.o ft_putstr_fd.o ft_strjoin.o ft_strncmp.o ft_tolower.o ft_lstnew_bonus.o ft_lstadd_front_bonus.o ft_lstsize_bonus.o ft_lstlast_bonus.o ft_lstadd_back_bonus.o ft_lstdelone_bonus.o ft_lstclear_bonus.o ft_lstiter_bonus.o ft_lstmap_bonus.o ft_intlen.o get_next_line.o get_next_line_utils.o ft_parse_width.o ft_print_padding.o ft_print_char.o ft_print_string.o ft_print_pointer.o ft_print_int.o ft_print_unsigned.o ft_print_hexa.o ft_print_percent.o ft_printf.o
-HEADERS	=	libft.h
+NAME = libft.a
+
+CC = cc
+
+CFLAGS = -Wall -Wextra -Werror
+
+SRCS = ft_strlen.c ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
+	ft_isprint.c ft_toupper.c ft_tolower.c ft_strlcpy.c ft_strlcat.c \
+	ft_strchr.c ft_strrchr.c ft_strnstr.c ft_strncmp.c ft_atoi.c ft_itoa.c \
+	ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_memchr.c ft_memcmp.c \
+	ft_calloc.c ft_strdup.c ft_substr.c ft_strtrim.c ft_strjoin.c ft_split.c \
+	ft_strmapi.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
+	ft_striteri.c \
+	ft_printf.c print_hex.c print_ptr.c print_str.c print_u.c
+
+OBJS = $(SRCS:.c=.o)
 
 all: $(NAME)
 
-$(NAME): $(OBJ)
-	ar rcs $(NAME) $(OBJ)
+$(NAME): $(OBJS)
+	ar rc $(NAME) $(OBJS)
 
-%.o: %.c $(HEADERS)
-	$(CC) $(CFLAGS) -c $<
+%.o: %.c
+	$(CC) -c $(CFLAGS) -o $@ $<
 
 clean:
-	rm -f $(OBJ)
+	rm -f $(OBJS)
 
 fclean: clean
 	rm -f $(NAME)
 
-re: fclean $(NAME)
+re: fclean all
+
+# test: $(NAME)
+# 	@cd tests && make
+# 	@cd tests && ./tests
+
+.PHONY: all clean fclean re #test
